fix content from stretching page

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -15,22 +15,6 @@
   }
 }
 
-@media screen and (max-width: 1230px) and (min-width: 1085px) {
-  .content-stretch-fix {
-    margin: 0 auto;
-    max-width: 100%;
-    padding: 0px 12.6rem 1.45rem;
-    padding-top: 0;
-  }
-
-  .nav-stretch-fix {
-    margin: 100;
-    max-width: 100%;
-    padding: 0px 120.6rem 1.45rem;
-    padding-top: 0;
-  }
-}
-
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
 
